kubernetes/flux/infrastructure/base/monitoring/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        name: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v3.12.0
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "4Gi"
          volumeMounts:
            - mountPath: /etc/prometheus/config
              name: config
            - mountPath: /prometheus
              name: data
          securityContext:
            runAsUser: 3003
            runAsNonRoot: false
            runAsGroup: 3004
      volumes:
        - name: data
          nfs:
            path: /mnt/data/prometheus/
            server: 10.1.2.10
        - name: config
          configMap:
            name: prometheus-settings
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    name: prometheus
spec:
  selector:
    name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
