kubernetes/flux/infrastructure/base/monitoring/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: nginx
  tls:
    - secretName: prometheus-certificate-secret
  rules:
    - host: prometheus.clinch-home.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-frontend
                port:
                  number: 80
    - host: prometheus.clincha.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-frontend
                port:
                  number: 80
